--- a/index.css
+++ b/index.css
@@ -22,3 +22,15 @@ body {
     background-repeat: no-repeat;
     z-index: 1;
 }
+
+#forgrund {
+     position: absolute;
+    top: 0vw;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(forgrund.svg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    z-index: 2;
+}
