--- a/index.css
+++ b/index.css
@@ -25,10 +25,10 @@ body {
 
 #forgrund {
      position: absolute;
-    top: 0vw;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: 15vw;
+    left: 20vw;
+    width: 120vw;
+    height: 40vw;
     background-image: url(forgrund.svg);
     background-size: 100%;
     background-repeat: no-repeat;
