added celeb css

--- a/index.css
+++ b/index.css
@@ -104,3 +104,29 @@ body {
 .doer_closed  {
     background-position: -100% 0;
 }
+
+/* 6ix9ine KARAKTER */
+
+#celeb_sprite {
+    background-image: url(walk_6ix9ine-01.svg);
+    background-size: 400% 100%;
+    width: 14vw;
+    height: 20vw;
+}
+
+.celeb_walkcycle {
+    animation-name: celeb_walkcycle_kf;
+    animation-duration: 1s;
+    animation-timing-function: steps(4);
+    animation-iteration-count: infinite;
+    animation-direction: reverse;
+}
+
+@keyframes celeb_walkcycle_kf {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: -400% 0;
+    }
+}
