--- a/index.css
+++ b/index.css
@@ -130,3 +130,29 @@ body {
         background-position: -400% 0;
     }
 }
+
+/* DRENG KARAKTER */
+
+#dreng_sprite {
+    background-image: url(walk_hovedpersonen-01.svg);
+    background-size: 400% 100%;
+    width: 14vw;
+    height: 20vw;
+}
+
+.dreng_walkcycle {
+    animation-name: dreng_walkcycle_kf;
+    animation-duration: 1s;
+    animation-timing-function: steps(4);
+    animation-iteration-count: infinite;
+    animation-direction: reverse;
+}
+
+@keyframes dreng_walkcycle_kf {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: -400% 0;
+    }
+}
