rettet walkcycle nørd

--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ body {
 /*NØRD KARAKTER*/
 
 #noerd_sprite {
-    background-image: url(noerd_walkcycle-01.svg);
+    background-image: url(noerd_walkcycle_ny-01.svg);
     background-size: 400% 100%;
     width: 14vw;
     height: 20vw;
