--- a/index.css
+++ b/index.css
@@ -68,7 +68,7 @@ body {
 .noerd_movein {
      animation-name: noerd_movein_kf;
     animation-duration: 1s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1;
     animation-fill-mode: forwards;
     animation-timing-function: linear;
 }
@@ -122,7 +122,7 @@ body {
 .kat_movein {
      animation-name: kat_movein_kf;
     animation-duration: 1s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1;
     animation-fill-mode: forwards;
     animation-timing-function: linear;
 }
@@ -192,6 +192,29 @@ body {
     background-size: 400% 100%;
     width: 14vw;
     height: 20vw;
+}
+
+.celeb_movein {
+     animation-name: celeb_movein_kf;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+}
+
+@keyframes celeb_movein_kf {
+    0% {
+        transform: translate(100vw, 20vw);
+    }
+
+    100% {
+        transform: translate(50vw, 30vw);
+    }
+
+}
+
+.celeb_positionin {
+    transform: translate(50vw, 30vw);
 }
 
 .celeb_walkcycle {
@@ -282,7 +305,7 @@ body {
 .kvinde_movein {
      animation-name: kvinde_movein_kf;
     animation-duration: 1s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1;
     animation-fill-mode: forwards;
     animation-timing-function: linear;
 }
