--- a/index.css
+++ b/index.css
@@ -450,13 +450,13 @@ body {
 }
 
 #info_box {
-    background-image: url(pjece_logoer_projekt-01.svg);
+    background-image: url(pjece_logoer_projekt_ny.png);
     background-repeat: no-repeat;
     background-size: 100%;
-    width: 80vw;
-    height: 39vw;
-    left: -5vw;
-    top: -3.5vw;
+    width: 40vw;
+    height: 35vw;
+    left: 5vw;
+    top: 3vw;
     position: absolute;
     pointer-events: none;
     display: none;
