--- a/index.css
+++ b/index.css
@@ -490,3 +490,17 @@ body {
     display: none;
     z-index: 3;
 }
+
+#credit_antal_forkert {
+    background-image: url(pjece_logoer_projekt_forkert.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 40vw;
+    height: 35vw;
+    right: 5vw;
+    top: 3vw;
+    position: absolute;
+    pointer-events: none;
+    display: none;
+    z-index: 3;
+}
