css link til index

--- a/forside.css
+++ b/forside.css
@@ -42,7 +42,7 @@ a {
  position: absolute;
     z-index: 2;
     text-decoration: none;
-    color: black;
+    color: white;;
     font-size: 5em;
     right: 37vw;
     bottom: 17vw;
