rettet farve i css

--- a/index.css
+++ b/index.css
@@ -509,7 +509,7 @@ body {
   z-index: 2;
   text-decoration: none;
   color: white;
-  background-color: orange;
+  background-color: #F38B2E;
   font-size: 2em;
   bottom: 2vw;
   right: 35vw;
